--- a/package.json
+++ b/package.json
@@ -2,9 +2,16 @@
   "name": "alphajs",
   "version": "1.0.0-alpha",
   "description": "Algebraic Structures For JavaScript",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "inspect": "npm run check:style && npm run check:type",
+    "check:style": "eslint src",
+    "check:type": "tsc --noEmit",
+    "test": "jest --watch",
+    "test:report": "jest --coverage",
+    "build": "tsc --project tsconfig.prod.json",
+    "prebuild": "rimraf dist/es"
   },
   "repository": {
     "type": "git",
@@ -23,5 +30,13 @@
   "volta": {
     "node": "18.7.0",
     "npm": "8.17.0"
+  },
+  "devDependencies": {
+    "@nerdscoding/eslint-config": "^1.0.0",
+    "@types/jest": "^29.2.3",
+    "jest": "^29.3.1",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.9.3"
   }
 }
