--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,16 +10,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: init
-        uses: volta-cli/action@v1
+      - uses: volta-cli/action@v3
       - run: npm ci
-      - name: inspect
-        run: npm run inspect
-      - name: test
-        run: npm run test:report
-      - name: build
-        run : npm run build
+      - run: npm run inspect
+      - run: npm run test:report
+      - run: npm run build
