--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -1,7 +1,9 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "dist/es"
+    "outDir": "dist/es",
+    "sourceMap": false,
+    "declarationMap": false
   },
   "include": [
     "src/**/*.ts"
