--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "npm": "9.1.3"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@nerdscoding/eslint-config": "^1.2.0",
     "@types/jest": "^29.2.3",
     "jest": "^29.3.1",
