--- a/package.json
+++ b/package.json
@@ -28,16 +28,15 @@
   },
   "homepage": "https://github.com/crusoexia/alphajs#readme",
   "volta": {
-    "node": "18.7.0",
-    "npm": "9.1.3"
+    "node": "18.15.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
-    "@nerdscoding/eslint-config": "^1.2.0",
-    "@types/jest": "^29.2.3",
-    "jest": "^29.3.1",
-    "rimraf": "^3.0.2",
-    "ts-jest": "^29.0.3",
-    "typescript": "^4.9.3"
+    "@nerdscoding/eslint-config": "^1.3.0",
+    "@types/jest": "^29.5.0",
+    "jest": "^29.5.0",
+    "rimraf": "^4.4.1",
+    "ts-jest": "^29.0.5",
+    "typescript": "^5.0.3"
   }
 }
